2023-07-28T08:16:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5689783896 # 1728
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 275 442 / 277 444
* notice: next accum: outdated-unq outdated-all / unq all: 275 442 / 278 446
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-28]

2023-07-25T16:17:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5659233128 # 1720
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-25
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 273 438 / 277 444
* notice: next accum: outdated-unq outdated-all / unq all: 275 442 / 277 444
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-11] / []

2023-07-24T16:17:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5647277454 # 1717
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 269 432 / 277 444
* notice: next accum: outdated-unq outdated-all / unq all: 273 438 / 277 444
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-10] / []

2023-07-17T16:20:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5578095119 # 1696