@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-28T08:16:08Z",
-  "count_outdated" : 442,
-  "uniques_outdated" : 275,
+  "timestamp" : "2023-07-30T08:15:14Z",
+  "count_outdated" : 443,
+  "uniques_outdated" : 276,
   "count" : 446,
   "uniques" : 278,
   "clones" : [
-    {
-      "timestamp": "2023-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-17T00:00:00Z",
       "count": 1,
